--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-react": "^7.10.0",
-    "eslint-plugin-standard": "^3.1.0"
+    "eslint-plugin-standard": "^3.1.0",
+    "node-sass": "^4.9.2",
+    "sass-loader": "^7.0.3"
   }
 }
